[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/Spritesheet/spritesheet_characters.png" type="Texture" id=1]
[ext_resource path="res://actors/Player.gd" type="Script" id=2]
[ext_resource path="res://assets/tanks/Spritesheet/onlyObjects_default.png" type="Texture" id=3]
[ext_resource path="res://actors/Health.tscn" type="PackedScene" id=4]
[ext_resource path="res://actors/WeaponManager.gd" type="Script" id=5]
[ext_resource path="res://Team.tscn" type="PackedScene" id=6]
[ext_resource path="res://weapons/Pistol.tscn" type="PackedScene" id=7]
[ext_resource path="res://weapons/SubmachineGun.tscn" type="PackedScene" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 19.5 )

[node name="Player" type="KinematicBody2D" groups=["obstacles", "player"]]
position = Vector2( 419, 246 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 350, 0, 36, 44 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -1, -0.5 )
shape = SubResource( 1 )

[node name="BlinkTarget" type="Position2D" parent="."]
visible = false
position = Vector2( 184, 0 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="BlinkTarget"]
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 360, 176, 12, 12 )

[node name="Health" parent="." instance=ExtResource( 4 )]

[node name="Team" parent="." instance=ExtResource( 6 )]
team = 1

[node name="CameraTransform" type="RemoteTransform2D" parent="."]

[node name="WeaponManager" type="Node2D" parent="."]
position = Vector2( 25, 12 )
script = ExtResource( 5 )

[node name="Pistol" parent="WeaponManager" instance=ExtResource( 7 )]

[node name="SubmachineGun" parent="WeaponManager" instance=ExtResource( 8 )]
